src/snapshots/bl__tests__snapshots__cmd_value.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Get the current value of a form element

Usage: bl value [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector for the form element

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl value "input[name=email]"
  # Print the current value of the email input
