src/snapshots/bl__tests__snapshots__cmd_version.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Print the version number

Usage: bl version [OPTIONS]

Options:
      --json     Output as JSON
  -v, --verbose  Enable debug logging
  -h, --help     Print help
