src/snapshots/bl__tests__snapshots__cmd_ws-test.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Test WebSocket connection (type messages, see echoes)

Usage: bl ws-test [OPTIONS] <url>

Arguments:
  <url>  

Options:
  -v, --verbose  Enable debug logging
  -h, --help     Print help
